--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           class="login__input login__input--user"
         />
         <input
-          type="text"
+          type="password"
           placeholder="PIN"
           maxlength="4"
           class="login__input login__input--pin"
